# FINAL_WS

./: README.md
NEW/: test_choi_fix_2.py  waypoint_follower.py
NEW/launch/: ransac.launch
NEW/scripts/: center_stable.py  center_stable.yaml  encoder_node.py  test.py  test.yaml  test_1.py  test_choi.py  test_choi_1.py  test_choi_ackermann.py  test_choi_endrow.py  test_choi_endrow_keepstop.py
devel/: .catkin  local_setup.sh
devel/lib/darknet_ros/: darknet_ros
devel/lib/pkgconfig/: darknet_ros.pc  darknet_ros_msgs.pc  field_robot_base.pc  field_robot_bringup.pc  field_robot_cam.pc  field_robot_description.pc  field_robot_missions.pc  field_robot_nav.pc  field_robot_slam.pc  rosserial_arduino.pc  rosserial_chibios.pc  rosserial_mbed.pc  (+12 more)
src/field_robot_base/: CMakeLists.txt
src/field_robot_bringup/: CMakeLists.txt  package.xml
src/field_robot_bringup/launch/: real_robot_teb_slam.launch
src/field_robot_cam/: CMakeLists.txt
src/field_robot_description/: CMakeLists.txt
src/field_robot_nav/: CMakeLists.txt  package.xml
src/field_robot_nav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  ekf_localization.yaml  global_costmap_params.yaml  global_planner.yaml  teb_local_planner_params.yaml
src/field_robot_nav/config/1/: costmap_common.yaml  global_costmap.yaml  local_costmap.yaml  teb_local_planner.yaml
src/field_robot_nav/launch/: ekf.launch  move_base_dwa.launch  move_base_teb.launch
src/field_robot_nav/scripts/: send_goal.py  test.py  test_map.pgm  test_map.yaml
src/field_robot_slam/: CMakeLists.txt
(+72 files in other folders)
