<?xml version="1.0"?>
<package format="2">
  <name>field_robot_bringup</name>
  <version>0.0.1</version>
  <description>Full bringup for my field robot</description>

  <maintainer email="you@todo.todo">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>field_robot_base</exec_depend>
  <exec_depend>field_robot_slam</exec_depend>
  <exec_depend>field_robot_nav</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
</package>
